# Synesthesia-AI

./: .gitignore  CONTRIBUTING.md  DOCS.md  GITHUB_CHECKLIST.md  LARGE_FILES_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  PUSH_FIX.md  QUICKSTART.md  README.md  READY_TO_PUSH.md  local.properties  push-to-github.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/model-parameters/: model_metadata.h  model_variables.h
app/src/main/cpp/tflite/: download_tflite_libs.sh
app/src/main/cpp/tflite-model/: tflite_learn_840166_5.h  tflite_learn_840166_5.tflite
app/src/main/java/com/example/test_camera/: IntroActivity.kt  MainActivity.kt  ScanningLineView.kt  SplashActivity.kt  StarfieldView.kt
app/src/main/res/drawable/: tour_highlight.xml
app/src/main/res/layout/: activity_intro.xml  activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
